# backdrop

./: .env  .gitignore  2  Cargo.toml  Dockerfile  README.md
configuration/: base.yaml  local.yaml  production.yaml
scripts/: init_db.sh  init_redis.sh  install.sh  run-docker-local.sh  run_local.sh  to-video.sh
src/: configuration.rs  content_length_limit.rs  lib.rs  main.rs  render_worker.rs  routes.rs  startup.rs  telemetry.rs  utils.rs
src/routes/: errors.rs  load_file.rs  save_file.rs
src/routes/load_file/: get.rs  post.rs
src/routes/save_file/: get.rs  post.rs
templates/: base.html  file_load.html  file_save.html  file_upload.html  get_saved.html  style.css
tests/api/: helper.rs  main.rs
tests/backdrop/: health_check.rs  helper.rs  main.rs  redis.rs  save_file.rs
