[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "api"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features =  ["derive"] }
serde-aux = "3"
config = "0.13"
secrecy = { version = "0.8", features = ["serde"] }
anyhow = "1"
uuid = { version = "1", featues = ["v4", "serde"] }

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.6"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

[dependencies.reqwest]
version = "0.11"
default-features = false
featues = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
once_cell = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
