[package]
name = "backdrop"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backdrop"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "3"
config = "0.13"
anyhow = "1"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.6"
actix-multipart = "0.5.0"
futures-util = "0.3.26"
uuid = { version = "1", features = ["v4", "serde"] }
sanitize-filename = "0.4"
secrecy = { version = "0.8.0", features = ["serde"] }
mobc = "0.8.1"
mobc-redis = "0.8.0"
thiserror = "1.0.38"
tera = "1.17.1"
mime = "0.3.16"
serde_json = "1.0.93"


[dev-dependencies]
once_cell = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
lazy_static = "1.4"
